# ea-ibf-climada

exposure/: .gitignore  README.md  sample-fortran-grid.f90
exposure/data/: README.md
exposure/pipeline/: FAILURE-ANALYSIS-2026-06-11.md  PLAN.md  README.md  aggregate_buildings.py  aggregate_places.py  aggregate_to_grid.py  compute_exposure.py  config.py  download_overture.py  grid.py  place_categories.py  plot_buildings_1km.py  plot_exposure.py  pyproject.toml  run_buildings_1km.py  run_pipeline.py  upload_to_hf.py
