[project]
name = "ea-exposure-pipeline"
version = "0.1.0"
description = "East Africa Overture-Maps exposure dataset (0.05 deg grid)"
requires-python = ">=3.10"
dependencies = [
    "overturemaps>=0.13.0",
    "geopandas>=0.14",
    "pyarrow>=15",
    "shapely>=2.0",
    "pyproj>=3.6",
    "rasterio>=1.3",
    "numpy>=1.26",
    "pandas>=2.0",
    "huggingface_hub>=0.23",
    "python-dotenv>=1.0",
]

[tool.uv]
package = false
